projectvpc.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "AWS CloudFormation Sample Template for creating an Amazon RDS DB instance.",
    "Parameters": {
        "DBPassword": {
            "Type": "String",
            "Description": "Db password must alphanumeric"
        }
    },
    "Resources": {
        "RDSDEMOVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "192.168.0.0/16",
                "Tags": [
                    {
                        "Key": "Nmae",
                        "Value": "RDSDEMOVPC"
                    }
                ]
            }
        },
        "PrivateSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "ap-south-1a",
                "VpcId": {
                    "Ref": "RDSDEMOVPC"
                },
                "CidrBlock": "192.168.1.0/24",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Private-Subnet1"
                    }
                ]
            }
        },
        "PrivateSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": "ap-south-1b",
                "VpcId": {
                    "Ref": "RDSDEMOVPC"
                },
                "CidrBlock": "192.168.2.0/24",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Private-Subnet2"
                    }
                ]
            }
        },

        "RdsDBSubnetGroup": {
            "Type": "AWS::RDS::DBSubnetGroup",
            "Properties": {
                "DBSubnetGroupDescription": "Subnet for rds",
                "SubnetIds": [
                    {
                        "Ref": "PrivateSubnet1"
                    },
                    {
                        "Ref": "PrivateSubnet2"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Rds-DBSubnetGroup"
                    }
                ]
            }
        },
        "RdsDBInstance": {
            "Type": "AWS::RDS::DBInstance",
            "Properties": {
                "AllocatedStorage": "5",
                "DBInstanceIdentifier": "MyRdsDemo",
                "DBName": "TestRds",
                "VPCSecurityGroups": [
                    {
                        "Ref": "RdsSecurityGroup"
                    }
                ],
                "DBSubnetGroupName": {
                    "Ref": "RdsDBSubnetGroup"
                },
                "DBInstanceClass": "db.t2.small",
                "Engine": "MYSQL",
                "EngineVersion": "8.0.28",
                "MasterUsername": "masterrds",
                "MasterUserPassword": {
                    "Ref": "DBPassword"
                },
                "MultiAZ": "false",
                "Port": "3306",
                "PubliclyAccessible": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "MYRDSDEMO"
                    }
                ]
            }
        },
        "RdsSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Allow Rds connection",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 3306,
                        "ToPort": 3306,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "VpcId": {
                    "Ref": "RDSDEMOVPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Rds-Sg"
                    }
                ]
            }
        }
    }
}
